--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,3 +1,16 @@
-<p>
-  shopping-edit works!
-</p>
+<form class="ui form">
+  <h4 class="ui dividing header">Edit Shopping List</h4>
+  <div class="two fields">
+    <div class="ten wide field">
+      <label for="name">Name</label>
+      <input type="text" name="name" id="name" class="">
+    </div>
+    <div class="four wide field">
+      <label for="amount">Amount</label>
+      <input type="number" name="amount" id="amount">
+    </div>
+  </div>
+  <button type="submit" name="button" class="ui green basic labeled icon button"><i class="add icon"></i>Add</button>
+  <button type="button" name="button" class="ui orange basic labeled icon button"><i class="edit icon"></i>Edit</button>
+  <button type="button" name="button" class="ui red basic labeled icon button"><i class="undo icon"></i>Clear</button>
+</form>
