--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header (selection)="onNavigate($event)"></app-header>
 <div class="ui container" id="main-container">
-    <app-recipes *ngIf="selectedFeature === 'recipes'"></app-recipes>
-    <app-shopping-list *ngIf="selectedFeature != 'recipes'"></app-shopping-list>
+    <!-- <app-recipes *ngIf="selectedFeature === 'recipes'"></app-recipes> -->
+    <!-- <app-shopping-list *ngIf="selectedFeature != 'recipes'"></app-shopping-list> -->
+    <router-outlet></router-outlet>
 </div>
